--- a/under homw.html
+++ b/under homw.html
@@ -75,7 +75,7 @@ header.logo  {
 }
 
 .socialmedia ul li a {
-	margin-left: px;
+	margin-left: 5px;
 	padding: 6px;
 	background: #444;
 	color: #fff;
@@ -194,6 +194,10 @@ nav ul li a:hover {
  		 transform: scale(1.2); 
 		
 	}
+    
+    body{
+     background-color:black;
+}
     
    
 </style>
